kubernetes/applications/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: freshrss
